[vue] truncate trader name fixed

--- a/assets/scss/main.sass
+++ b/assets/scss/main.sass
@@ -629,14 +629,6 @@ input:not([type=button]):not([type=submit]):not([type=reset]):not([type=radio]):
   top: 32px
   right: 10px
 
-.show-password:hover
-  cursor: pointer
-  color: $color-toggle-password-active
-
-.show-password-active
-  @extend .show-password
-  color: $color-toggle-password-hover
-
 .truncate-token
   width: 100%
   white-space: nowrap
