--- a/assets/scss/token-page.sass
+++ b/assets/scss/token-page.sass
@@ -78,3 +78,28 @@
 
 .truncate-token-name
   word-break: break-all
+
+.truncate-trader-name
+  width: 160%
+  overflow: hidden
+  text-overflow: ellipsis
+  white-space: nowrap
+  display: inline-block
+
+.row-orders
+  display: table
+  width: 100%
+  table-layout: fixed
+  border-spacing: 10px
+
+.column-orders
+  display: table-cell
+
+.close-sign
+  vertical-align: top
+
+.trader-slot
+  position: relative
+  right: 15px
+  display: inline-block
+  vertical-align: bottom
